[project]
name = "rbeesoftapps"
version = "0.1.0"
description = ""
authors = [
    {name = "Brecheisen", email = "r.brecheisen@maastrichtuniversity.nl"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyside6-essentials>=6.9",
]

[tool.poetry]
packages = [{include = "rbeesoftapps", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
